# RES_plasmides

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  pyproject.toml
.streamlit/: config.toml
docs/: ARCHITECTURE_v2.md  ASSEMBLY_ENGINE_v2.md  AUDIT_RU.md  ROADMAP_v2.md
gui/: .gitignore  app.py  run.bat  run_designer.bat  style.css
gui/_pages/: p01_dashboard.py  p02_construct.py  p03_diff.py  p08_import.py
gui/api/: server.py
gui/components/: plasmid_map.py
gui/constructs/: KT031985.gb  P35_GA_GFP_Amds.gb
gui/designer/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
gui/docs/: architecture.md
gui/gui/: app.py  style.css
gui/guiv2/: GUI_SPEC.md  README.md  pyproject.toml
gui/guiv2/docs/: ux-concept-ru.md
gui/guiv2/gui/: app.py
gui/guiv2/gui/components/: diff_view.py  feature_table.py  plasmid_map.py  version_tree.py
gui/guiv2/gui/pages/: 01_dashboard.py  02_construct.py  03_diff.py  04_strains.py  05_parts.py  08_import.py
gui/guiv2/src/pvcs/: config.py  models.py  parts.py  search.py  strains.py  utils.py
gui/guiv2/tests/: test_cli.py  test_database.py  test_diff.py  test_parser.py  test_parts.py  test_primers.py  test_revision.py
gui/guiv2/tests/fixtures/real_plasmids/: P24_pPINK_BGII.gb
gui/tests/: test_assembly.py  test_overlap.py  test_search.py
src/pvcs/: assembly_engine.py  cli.py  database.py  diff.py  export.py  feature_db.py  golden_gate.py  intron_detection.py  kld.py  (+6 more)
tests/: conftest.py  test_feature_db.py  test_golden_gate.py  test_introns.py  test_kld.py  test_restriction.py  test_strains.py
(+150 files in other folders)
